[gd_scene load_steps=2 format=3 uid="uid://bsduxj0s4ta0u"]

[ext_resource type="Script" path="res://general/screen_gui/two_tier_menu.gd" id="1"]

[node name="TwoTierMenu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="FirstTierContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="SecondTierContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 4
